--- a/frontend/src/Components/BillsandInsuarance/BillsandInsuarance.css
+++ b/frontend/src/Components/BillsandInsuarance/BillsandInsuarance.css
@@ -70,6 +70,7 @@ body {
     background: linear-gradient(270deg, #8FDD9E 0%, #4ABCF8 100%);
     height: 50px;
     width: 170px;
+    margin-left: 240px;
 }
 #insurancetext {
     margin-top: 120px;
@@ -106,4 +107,146 @@ h2 {
     margin-top: 10rem;
 }button {
     border: none;
+}
+@media screen and (min-width:600px) and (max-width:900px) {
+    #bills{
+        height: fit-content;
+        width: 100%;
+        margin-top: 2rem;
+    }
+    .billimg{
+        height: 20rem;
+        width:20rem
+    }
+    .insuranceimg{
+        height: 12rem;
+  width: 18rem;
+    }
+
+    #billtext{
+        margin: 0;
+  text-align: center;
+  margin-top: 1rem;
+    }
+    #billtext h1{
+        text-align: center;
+        font-size: 1.5rem;
+    }
+    #billtext h2{
+        text-align: center;
+  font-size: 1.25rem;
+    }
+    #billtext p{
+        text-align: center;
+        font-size: 1rem;
+        font-weight: 600;
+    }
+    #pay{
+        height: 2.5rem;
+    width: 9rem;
+    margin: 0;
+    margin-bottom: 1rem;
+    }
+    #insurancetext{
+margin: 0;
+margin-top: 2rem;
+height: fit-content;
+width: fit-content;
+    }
+    #insurancetext h1{
+        text-align: center;
+        font-size: 1.5rem;
+    }
+    #insurancetext h2{
+        text-align: center;
+        font-size: 1.25rem;
+    }
+    #insurancetext p{
+        text-align: center;
+        font-size: 1rem;
+        font-weight: 600;
+    }
+#insurance{
+    height: fit-content;
+}
+#insure{
+    margin: 0;
+      margin-bottom: 3rem;
+}
+
+
+}
+@media screen and (max-width:600px)
+{
+    #bills{
+        height: fit-content;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  text-align: center;
+  margin-top: 1rem;
+
+    }
+    .billimg,.insuranceimg{
+        height: 12rem;
+  width: 12rem;
+    }
+    #billtext,#insurancetext{
+        width: 100%;
+  margin: 0;
+  margin-top: 1rem;
+  text-align: center;
+    }
+    #billtext{
+        width: 100%;
+  margin: 0;
+  margin-top: 1rem;
+  text-align: center;
+    }
+    #billtext ,#insurancetext h1{
+        text-align: center;
+  font-size: 1.5rem;
+    }
+    #billtext h1{
+        text-align: center;
+        font-size: 1.5rem;
+    }
+    #billtext,#insurancetext h2{
+        text-align: center;
+  font-size: 1.25rem;
+    }
+    #billtext h2{
+        text-align: center;
+  font-size: 1.25rem;
+    }
+    #billtext,#insurancetext p{
+        text-align: center;
+  font-size: 1rem;
+  font-weight: 600;
+    }
+    #billtext p{
+        text-align: center;
+  font-size: 1rem;
+  font-weight: 600;
+    }
+    #pay,#insure{height: 2.5rem;
+        width: 9rem;
+        margin: 0;
+        margin-bottom: 1rem;}
+        #pay{
+            height: 2.5rem;
+        width: 9rem;
+        margin: 0;
+        margin-bottom: 1rem;
+        }
+        #insurance{
+            height: fit-content;
+            display: flex;
+            flex-direction: column-reverse;
+            width: 100%;
+            justify-content: center;
+            text-align: center;
+            margin-top: 3rem;
+        }
 }
