--- a/frontend/src/Components/OPD/OPD.css
+++ b/frontend/src/Components/OPD/OPD.css
@@ -128,3 +128,154 @@ background-image: url("../SwaasIcons/yoga.png");
 
 background-size: cover;
 }
+@media screen and (min-width:600px) and  (max-width:900px){
+    #opdbody{
+        height: fit-content;
+        width: 100%;
+    }
+    #opdimages{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+      gap: 5px;
+      height:fit-content;
+     
+    }
+    .opdimg{
+        margin: 0.5rem;
+        height: fit-content;
+        margin: 1rem auto;
+      }
+      .opdimg h3{
+        font-size: 1rem;
+        font-weight: 600;
+      }
+      .tooth{
+        height:9rem;
+        width:6rem;
+        margin: 0;
+      }
+      .stethoscope,.yoga{
+        height:9rem;
+        width:7.5rem;
+        margin: 0;
+      }
+      .hand,.bed,.homeo{
+        height:9rem;
+        width:9rem;
+        margin: 0;
+      }
+}
+@media screen and (min-width:377px) and  (max-width:435px) {
+    #opdbody{
+        height: fit-content;
+        width: 100%;
+    }
+    #opdimages{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+      gap: 5px;
+      height:fit-content;
+     
+    }
+    .opdimg{
+        margin: 0.5rem;
+        height: fit-content;
+        margin: 1rem auto;
+      }
+      .opdimg h3{
+        font-size: 1rem;
+        font-weight: 600;
+      }
+      .tooth{
+        height:7.5rem;
+        width:4.5rem;
+        margin: 0;
+      }
+      .stethoscope,.yoga{
+        height:7.5rem;
+        width:6rem;
+        margin: 0;
+      }
+      .hand,.bed,.homeo{
+        height:7.5rem;
+        width:7.5rem;
+        margin: 0;
+      }
+}
+@media screen and (min-width:435px) and (max-width:600px) {
+    #opdbody{
+        height: fit-content;
+        width: 100%;
+    }
+    #opdimages{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+      gap: 5px;
+      height:fit-content;
+     
+    }
+    .opdimg{
+        margin: 0.5rem;
+        height: fit-content;
+        margin: 1rem auto;
+      }
+      .opdimg h3{
+        font-size: 1rem;
+        font-weight: 600;
+      }
+      .tooth{
+        height:9rem;
+        width:6rem;
+        margin: 0;
+      }
+      .stethoscope,.yoga{
+        height:9rem;
+        width:7.5rem;
+        margin: 0;
+      }
+      .hand,.bed,.homeo{
+        height:9rem;
+        width:9rem;
+        margin: 0;
+      }
+}
+@media screen  and (max-width:377px) {
+    #opdimages{
+       display: flex;
+       flex-direction: column;
+       height: fit-content;
+      }
+      .opdimg{
+        margin: 1rem;
+        height: fit-content;
+      }
+      .opdimg h3{
+        font-size: 1rem;
+        font-weight: 600;
+      }
+      .tooth{
+        height:9rem;
+        width:6rem;
+        margin: 0;
+      }
+      .stethoscope,.yoga{
+        height:9rem;
+        width:7.5rem;
+        margin: 0;
+      }
+      .hand,.bed,.homeo{
+        height:9rem;
+        width:9rem;
+        margin: 0;
+      }
+      }
+@media screen and (max-width:900px){
+    .SearchBox{
+        display: none;
+    }
+    #opdbody h1{
+        font-size: 1.5rem;
+        text-align: center;
+    }
+   
+}
