--- a/frontend/src/Components/Registration/Patient/Register.css
+++ b/frontend/src/Components/Registration/Patient/Register.css
@@ -8,6 +8,27 @@
     border-top-right-radius: 4px;
     margin: 0;
 }
+.Register{
+    display: flex;
+}
+.RegistrationPhoto{
+    background-image: url("../../SwaasIcons/aboutuspic.png");
+    height: 20rem;
+    width: 26rem;
+    margin-top: 10rem;
+    background-size: cover;
+    position: relative;
+}
+.genderOption{
+    border: none;
+    background: #DFF8F8;
+    margin-left: 3rem;
+    width: 7rem;
+    height: 2rem;
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    border: 1px solid black;
+}
 .logo{
     /* background-image: url("./Assets/logo.png"); */
     background-size: cover;
@@ -27,11 +48,11 @@
     font-weight: 500;
     font-size: 2rem;
 }
-.d-sign-in{
+.registrationForm{
     background-color: #CAEFD1;
     height: auto;
     width: 60vw;
-    margin-left: 35vw;
+    margin-left: 5rem;
     margin-top: 3rem;
     border-radius: 1.5rem;
     margin-bottom: 5rem;
@@ -54,6 +75,17 @@
     width: 100%;
     color: #307743;
 }
+.doctorId-in-File{
+    height: 2.5rem;
+    width: 80%;
+    margin-left: 3rem;
+    background-color: #CAEFD1;
+    border-radius: 0.5rem;
+    font-size: 1.25rem;
+    border: 1px solid black;
+    padding-left: 0.5rem;
+
+}
 .doctorId-in{
     height: 2.5rem;
     width: 80%;
@@ -62,6 +94,7 @@
     border-radius: 0.5rem;
     font-size: 1.25rem;
     border: 1px solid black;
+    padding: 1rem;
 }
 .doc-btn{
     font-size: 1.25rem;
@@ -78,11 +111,4 @@
 }
 .doc-btn:hover{
     box-shadow: 2px 4px 8px black;
-}
-.sign-photo{
-    position: fixed;
-    /* background-image: url("./Assets/Reports.png"); */
-    background-size: cover;
-    height: 80vh;
-    width: 38vw;
 }
