--- a/frontend/src/Components/Registration/Registration.css
+++ b/frontend/src/Components/Registration/Registration.css
@@ -4,7 +4,8 @@
 	font-size: 15px;
 	line-height: 1.7;
 	overflow-x: hidden;
-  background-image: url('https://wallpapers.com/images/hd/medical-background-cjge7e89adg6ub8x.jpg');
+  /* overflow-y: hidden; */
+  /* background-image: url('https://wallpapers.com/images/hd/medical-background-cjge7e89adg6ub8x.jpg'); */
 }
 p {
   font-weight: 500;
@@ -18,6 +19,13 @@ h6 span{
   padding: 0 20px;
   text-transform: uppercase;
   font-weight: 700;
+}
+.LogIn,.SingnUp{
+  color: #0D6869;
+  height: 2rem;
+  width: 6rem;
+  font-weight: 600;
+  margin: 0 1.5rem;
 }
 .registration-section{
   position: relative;
@@ -60,7 +68,7 @@ div.scroll{
   padding: 0;
   margin: 20px auto;
   cursor: pointer;
-  background-color: #acaba7;
+  background-color: #8FDD9E;
 }
 .registration-checkbox:checked + label:before,
 .registration-checkbox:not(:checked) + label:before{
@@ -70,7 +78,7 @@ div.scroll{
   height: 36px;
   border-radius: 50%;
   color: white;
-  background-color: black;
+  background-color: #0D6869;
   font-family: 'unicons';
   content: '\eb4f';
   z-index: 20;
@@ -241,7 +249,7 @@ div.scroll{
   text-transform: uppercase;
   -webkit-transition : all 200ms linear;
   transition: all 200ms linear;
-  padding: 0 30px;
+  padding: 0 0;
   letter-spacing: 1px;
   display: -webkit-inline-flex;
   display: -ms-inline-flexbox;
@@ -257,15 +265,15 @@ div.scroll{
   -ms-flex-pack: center;
   text-align: center;
   border: none;
-  background-color: #ffeba7;
+  background-color: #DFF8F8;
   color: linear-gradient(to left,#99E5A2,#41D8DD);
   box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
 }
 .registration-btn:active,
 .registration-btn:focus{  
-  background-color: #102770;
-  color: #ffeba7;
-  box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
+  background-color: #0D6869;
+  color: #DFF8F8;
+  box-shadow: 0 8px 24px 0 #10277033;
 }
 .registration-btn:hover{  
   background-color: linear-gradient(to left,#99E5A2,#63e3e8);
