--- a/frontend/src/Components/OPD/OPD.css
+++ b/frontend/src/Components/OPD/OPD.css
@@ -1,127 +1,173 @@
 *{
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 
 body {
-    background: #CAF4F4;;
+  background: #CAF4F4;;
 }
+/* .OPDsearch {
+display: none; 
+position: relative;
+top: 0;
+right: 0;
+width: var(--btn-width);
+font-weight: bold;
+background: var(--color-brand);
+border-radius: 0 var(--rad) var(--rad) 0;
+} */
+/* #textboxopd:not(:placeholder-shown) {
+
+
++ button {
+  display: block;
+}
+} */
 #textboxopd {
-    width: 500px;
-    height: 50px;
-    flex-shrink: 0;
-    border-radius: 20px;
-    border: 1px solid #000;
-    background: #DFF8F8;
-    font-size: larger;
-    margin-top: 0.8rem;
+  width: 400px;
+  height: 40px;
+  flex-shrink: 0;
+  border-radius: 20px;
+  border: none;
+  /* border: 1px solid #000; */
+  background: white;
+  font-size: larger;
+  padding:0 1rem;
+  margin-top: 0.8rem;
+  margin-right: 4rem;
 }
+.textboxopdSpeciality{
+display: flex;
+justify-content: center;
+}
+#textBoxSpeciality {
+width: 400px;
+height: 40px;
+flex-shrink: 0;
+border-radius: 20px;
+border: none;
+/* border: 1px solid #000; */
+background: white;
+font-size: larger;
+padding:0 1rem;
+margin-top: 0.8rem;
+/* margin-right: 4rem; */
+}
+
 #opdimages {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
-h1 {
-    display: flex;
-    justify-content: center;
-    color: #0D6869;
-    font-family: Inter;
+h2 {
+  display: flex;
+  justify-content: center;
+  color: #0D6869;
+  font-family: Inter;
+}
+h3{
+font-size: 1.5rem;
 }
 #opdbody {
-    padding-top: 30px;
-    height: 650px;
+  padding-top: 30px;
+  height: 650px;
 }
 .footer{
 
-    height: 400px;
-    width: 100vw;
-    background:linear-gradient(#45969F,#45969F);
-  }
-  .custom-radio {
-    display: inline-block;
-    position: relative;
-    padding-left: 25px;
-    margin-right: 15px;
-    cursor: pointer;
-    width: 20px; /* Increase the width to make the radio button larger */
-    height: 20px;
+  height: 400px;
+  width: 100vw;
+  background:linear-gradient(#45969F,#45969F);
+}
+.custom-radio {
+  display: inline-block;
+  position: relative;
+  padding-left: 25px;
+  margin-right: 15px;
+  cursor: pointer;
+  width: 20px; /* Increase the width to make the radio button larger */
+  height: 20px;
 }
 
 .custom-radio::before {
-    content: "";
-    display: inline-block;
-   
-    border: 2px solid #3498db;
-    border-radius: 50%;
-    position: absolute;
-    left: 0;
-    top: 1px;
+  content: "";
+  display: inline-block;
+ 
+  border: 2px solid #3498db;
+  border-radius: 50%;
+  position: absolute;
+  left: 0;
+  top: 1px;
 }
 
 .opdimg {
-    background: #CAEFD1;
-    height: 400px;
-    width: 200px;
-    color: #0D6869;
-    /* padding-top: 5px; */
-    text-align: center;
-    border-radius: 1.5rem;
+  background: #CAEFD1;
+  height: 250px;
+  width: 200px;
+  color: #0D6869;
+  /* padding-top: 5px; */
+  text-align: center;
+  border-radius: 1.5rem;
+  margin-top: 1rem;
 }
 .opdimg:hover{
-    transform: scale(1.05);
-     /* Scale the element to 120% of its original size on hover */
-     background: #45969F;
+  transform: scale(1.05);
+   /* Scale the element to 120% of its original size on hover */
+   background: #45969F;
 
 }
 .tooth {
-    margin-top: 60px;
-    width: 180px;
-    height: 269px;
+  /* margin-top: 60px; */
+  margin-top: -3rem;
+  margin-left: 1.5rem;
+  width: 152px;
+  height: 225px;
 /* background-image: url("./images/tooth.png"); */
 background-image: url("../SwaasIcons/tooth.png");
 
 background-size: cover;
 }
 .stethoscope {
-    margin-top: 120px;
-    width: 180px;
-    height: 210px;
+  /* margin-top: 120px; */
+  margin-left: 1rem;
+  width: 170px;
+  height: 191px;
 /* background-image: url("./images/stethoscope.png"); */
 background-image: url("../SwaasIcons/stethoscope.png");
 
 background-size: cover;
 }
 .hand {
-    margin-top: 60px;
-    width: 180px;
-    height: 200px;
+  /* margin-top: 60px; */
+  width: 180px;
+  height: 189px;
 /* background-image: url("./images/hand.png"); */
 background-image: url("../SwaasIcons/hand.png");
 
 background-size: cover;
 }
 .bed{
-    margin-top: 120px;
-    width: 180px;
-    height: 200px;
+  /* margin-top: 120px; */
+  margin-left: 1rem;
+  width: 180px;
+  height: 172px;
 /* background-image: url("./images/bed.png"); */
 background-image: url("../SwaasIcons/bed.png");
 
 background-size: cover;
 }
 .homeo {
-    margin-top: 60px;
-    width: 180px;
-    height: 200px;
+  /* margin-top: 60px; */
+  width: 180px;
+  height: 200px;
 /* background-image: url("./images/homeo.png"); */
 background-image: url("../SwaasIcons/homeo.png");
 
 background-size: cover;
 }
 .yoga {
-    margin-top: 120px;
-    width: 180px;
+  /* margin-top: 120px; */
+  width: 180px;
 height: 200px;
 /* background-image: url("./images/yoga.png"); */
 background-image: url("../SwaasIcons/yoga.png");
@@ -129,153 +175,154 @@ background-image: url("../SwaasIcons/yoga.png");
 background-size: cover;
 }
 @media screen and (min-width:600px) and  (max-width:900px){
-    #opdbody{
-        height: fit-content;
-        width: 100%;
+  #opdbody{
+      height: fit-content;
+      width: 100%;
+  }
+  #opdimages{
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+    gap: 5px;
+    height:fit-content;
+   
+  }
+  .opdimg{
+      margin: 0.5rem;
+      height: fit-content;
+      margin: 1rem auto;
     }
-    #opdimages{
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-      gap: 5px;
-      height:fit-content;
-     
+    .opdimg h3{
+      font-size: 1rem;
+      font-weight: 600;
     }
-    .opdimg{
-        margin: 0.5rem;
-        height: fit-content;
-        margin: 1rem auto;
-      }
-      .opdimg h3{
-        font-size: 1rem;
-        font-weight: 600;
-      }
-      .tooth{
-        height:9rem;
-        width:6rem;
-        margin: 0;
-      }
-      .stethoscope,.yoga{
-        height:9rem;
-        width:7.5rem;
-        margin: 0;
-      }
-      .hand,.bed,.homeo{
-        height:9rem;
-        width:9rem;
-        margin: 0;
-      }
-}
-@media screen and (min-width:377px) and  (max-width:435px) {
-    #opdbody{
-        height: fit-content;
-        width: 100%;
+    .tooth{
+      height:9rem;
+      width:6rem;
+      margin: 0;
     }
-    #opdimages{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-      gap: 5px;
-      height:fit-content;
-     
-    }
-    .opdimg{
-        margin: 0.5rem;
-        height: fit-content;
-        margin: 1rem auto;
-      }
-      .opdimg h3{
-        font-size: 1rem;
-        font-weight: 600;
-      }
-      .tooth{
-        height:7.5rem;
-        width:4.5rem;
-        margin: 0;
-      }
-      .stethoscope,.yoga{
-        height:7.5rem;
-        width:6rem;
-        margin: 0;
-      }
-      .hand,.bed,.homeo{
-        height:7.5rem;
-        width:7.5rem;
-        margin: 0;
-      }
-}
-@media screen and (min-width:435px) and (max-width:600px) {
-    #opdbody{
-        height: fit-content;
-        width: 100%;
-    }
-    #opdimages{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-      gap: 5px;
-      height:fit-content;
-     
-    }
-    .opdimg{
-        margin: 0.5rem;
-        height: fit-content;
-        margin: 1rem auto;
-      }
-      .opdimg h3{
-        font-size: 1rem;
-        font-weight: 600;
-      }
-      .tooth{
-        height:9rem;
-        width:6rem;
-        margin: 0;
-      }
-      .stethoscope,.yoga{
-        height:9rem;
-        width:7.5rem;
-        margin: 0;
-      }
-      .hand,.bed,.homeo{
-        height:9rem;
-        width:9rem;
-        margin: 0;
-      }
-}
-@media screen  and (max-width:377px) {
-    #opdimages{
-       display: flex;
-       flex-direction: column;
-       height: fit-content;
-      }
-      .opdimg{
-        margin: 1rem;
-        height: fit-content;
-      }
-      .opdimg h3{
-        font-size: 1rem;
-        font-weight: 600;
-      }
-      .tooth{
-        height:9rem;
-        width:6rem;
-        margin: 0;
-      }
-      .stethoscope,.yoga{
-        height:9rem;
-        width:7.5rem;
-        margin: 0;
-      }
-      .hand,.bed,.homeo{
-        height:9rem;
-        width:9rem;
-        margin: 0;
-      }
-      }
-@media screen and (max-width:900px){
-    .SearchBox{
-        display: none;
-    }
-    #opdbody h1{
-        font-size: 1.5rem;
-        text-align: center;
+    .stethoscope,.yoga{
+      height:9rem;
+      width:7.5rem;
+      margin: 0;
     }
    
+    .hand,.bed,.homeo{
+      height:9rem;
+      width:9rem;
+      margin: 0;
+    }
+}
+@media screen and (min-width:377px) and  (max-width:435px) {
+  #opdbody{
+      height: fit-content;
+      width: 100%;
+  }
+  #opdimages{
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+    gap: 5px;
+    height:fit-content;
+   
+  }
+  .opdimg{
+      margin: 0.5rem;
+      height: fit-content;
+      margin: 1rem auto;
+    }
+    .opdimg h3{
+      font-size: 1rem;
+      font-weight: 600;
+    }
+    .tooth{
+      height:7.5rem;
+      width:4.5rem;
+      margin: 0;
+    }
+    .stethoscope,.yoga{
+      height:7.5rem;
+      width:6rem;
+      margin: 0;
+    }
+    .hand,.bed,.homeo{
+      height:7.5rem;
+      width:7.5rem;
+      margin: 0;
+    }
+}
+@media screen and (min-width:435px) and (max-width:600px) {
+  #opdbody{
+      height: fit-content;
+      width: 100%;
+  }
+  #opdimages{
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+    gap: 5px;
+    height:fit-content;
+   
+  }
+  .opdimg{
+      margin: 0.5rem;
+      height: fit-content;
+      margin: 1rem auto;
+    }
+    .opdimg h3{
+      font-size: 1rem;
+      font-weight: 600;
+    }
+    .tooth{
+      height:9rem;
+      width:6rem;
+      margin: 0;
+    }
+    .stethoscope,.yoga{
+      height:9rem;
+      width:7.5rem;
+      margin: 0;
+    }
+    .hand,.bed,.homeo{
+      height:9rem;
+      width:9rem;
+      margin: 0;
+    }
+}
+@media screen  and (max-width:377px) {
+  #opdimages{
+     display: flex;
+     flex-direction: column;
+     height: fit-content;
+    }
+    .opdimg{
+      margin: 1rem;
+      height: fit-content;
+    }
+    .opdimg h3{
+      font-size: 1rem;
+      font-weight: 600;
+    }
+    .tooth{
+      height:9rem;
+      width:6rem;
+      margin: 0;
+    }
+    .stethoscope,.yoga{
+      height:9rem;
+      width:7.5rem;
+      margin: 0;
+    }
+    .hand,.bed,.homeo{
+      height:9rem;
+      width:9rem;
+      margin: 0;
+    }
+    }
+@media screen and (max-width:900px){
+  .SearchBox{
+      display: none;
+  }
+  #opdbody h1{
+      font-size: 1.5rem;
+      text-align: center;
+  }
+ 
 }
