--- a/frontend/src/Components/Registration/Doctor/Register.css
+++ b/frontend/src/Components/Registration/Doctor/Register.css
@@ -8,6 +8,7 @@
     border-top-right-radius: 4px;
     margin: 0;
 }
+
 .logo{
     /* background-image: url("./Assets/logo.png"); */
     background-size: cover;
@@ -15,7 +16,21 @@
     width: 160px;
     margin-left: 1rem ;
 }
-
+.doctorRegisterform{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 60%;
+    margin: 1rem;
+}
+.doctorRegister{
+    background-image: url("../../SwaasIcons/Download\ free\ vector\ of\ Clean\ medical\ patterned\ background\ vector\ by\ marinemynt\ about\ medicine\,\ health\,\ pharmacy\,\ wallpaper\ medicine\,\ and\ hospital\ 2292666.jpeg");
+    background-size: cover;
+    z-index: -999;
+    display: flex;
+    justify-content: center;
+    
+}
 
 .profile-photo{
     /* background-image: url("./Assets/profile-photo.png"); */
@@ -28,7 +43,7 @@
     background-color: #CAEFD1;
     height: auto;
     width: 60vw;
-    margin-left: 35vw;
+    /* margin-left: 35vw; */
     margin-top: 1.5rem;
     border-radius: 1.5rem;
     margin-bottom: 5rem;
@@ -36,7 +51,7 @@
 }
 .d-sign-in h2{
     align-items: center;
-    margin-left: 44%;
+    /* margin-left: 44%; */
     font-weight: 500;
 }
 .doctor{
@@ -59,6 +74,11 @@
     font-size: 1.25rem;
     border: 1px solid black;
 }
+.headingDoctor{
+    text-align: center;
+  font-size: 1.8rem;
+  color: #6999B3;
+}
 .doc-btn{
     font-size: 1.25rem;
     color: aliceblue;
@@ -77,7 +97,10 @@
 }
 .sign-photo{
     /* background-image: url("./Assets/Reports.png"); */
+    background-image: url("../../SwaasIcons/Download_Doctors_Concept_Illustration_for_free-removebg-preview\ 1.png");
     background-size: cover;
-    height: 80vh;
-    width: 38vw;
+    height: 28rem;
+  width: 30rem;
+  position: relative;
+  top: 10rem;
 }
