--- a/frontend/src/Components/AboutUS/About.css
+++ b/frontend/src/Components/AboutUS/About.css
@@ -1,139 +1,42 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-
-nav {
-    height: 92px;
-    background: #DFF8F8;
+.header-aboutus{
     display: flex;
     justify-content: space-between;
+    width: 100vw;
+    height: 80px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    margin: 0;
+
+}
+.navbar-aboutus{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
-    padding-top: 20px;
-    padding-bottom: 40px;
-    top: 0px;
-    /* font-size: x-large; */
-    font-size: 1.6rem;
-    
-    color: #0D6869;
+    margin-top: 2vh;
+    position: absolute;
+    right: 10vw;
 }
 
-body {
-    background: #CAF4F4;;
-}
-h1 {
-    color: #0D6869;
-    text-align: left;
-}
-a {
-    text-decoration: none;
-}
-a:hover {
-    background: linear-gradient(270deg, #12ec33 0%, #0688ce 100%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-#mission {
-    display: flex;
-    margin-top: 80px;
-    justify-content: center;
-    align-items: center;
-}
-#missiontext {
-    margin-left: 100px;
-    margin-right: 100px;
-    font-size: larger;
-}
-.mottopic {
-    /* margin-right: 300px; */
-    /* background-image: url("./Images/motto.png"); */
-    background-image: url("../SwaasIcons/motto.png");
-    background-size: cover;
-    width: 4000px;
-height: 260px;
-}
-#aboutus {
-    display: flex;
-    margin-top: 100px;
-    justify-content: center;
-    align-items: center;
-}
-#abouttext {
-    margin-left: 100px;
-    margin-right: 100px;
-    font-size: larger;
-}
 .aboutpic {
-    /* margin-left: 300px; */
-    /* background-image: url("./Images/aboutuspic.png"); */
     background-image: url("../SwaasIcons/aboutuspic.png");
-
     background-size: cover;
     width: 4000px;
     height: 408px;
 
 }
-#founding {
-    display: flex;
-    margin-top: 80px;
-    justify-content: center;
-    align-items: center;
-}
-#foundingtext {
-    margin-left: 100px;
-    margin-right: 100px;
-    font-size: larger;
-}
-.foundingpic {
-    /* margin-right: 300px; */
-    /* background-image: url("./Images/foundingstory.png"); */
-    background-image: url("../SwaasIcons/foundingstory.png");
 
-    background-size: cover;
-    width: 4000px;
-    height: 385px;
-}
-#founders {
-    margin-top: 80px;
-    text-align: center;
-}
-#founderpics {
+.mission,.aboutus,.offering{
+    background-color: white;
+    width:90vw;
+    height: max-content;
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 40px;
-}
-.review{
-    display:flex;
+    flex-direction: column;
     justify-content: center;
-    height: 300px;
-    width: 75vw;
-    margin-top: 6rem;
-    background-color:#CAEFD1;
-}
-.review p{
-    text-align: center;
-    font-size: 2rem;
-    color: black;
-    position: relative;
-    top: 140px;
-    font-weight: bold;
-}
-.footer{
-    height: 200px;
-    width: 100vw;
-    margin-top: 4rem;
-    background:linear-gradient(to top,#99E5A2,#41D8DD);
-    border-top-right-radius: 1rem;
-    border-top-left-radius: 1rem;
-}
-.dropdown{
-    background-image: url("../SwaasIcons/icons8-list-48.png");
-    height:3rem;
-    width:3rem;
-    display: none;
-    cursor: pointer;
+    align-items: center;
+    margin: 0 auto;
+    margin-bottom: 5vh;
+    border-radius: 1vw;
 }
 .nav-barAbout{
     display: flex;
@@ -145,71 +48,35 @@ height: 260px;
 .navbar-elementsAbout{
     margin-left: 2.5rem;
 }
-@media screen and (max-width:900px) {
-    .dropdown{
-        display: block;
-        position: relative;
-        top:1rem;
-    }
-    .nav-barAbout{
-        display: none;
-    }
-    #mission{
+
+.aboutus-mission-heading,.aboutus-about-heading,.aboutus-offering-heading{
+    margin-top: 10px;
+    text-align: center;
+    font-size: 2rem;
+    font-weight: 600;
+}
+.tagline{
+    margin-top: 2rem;
+    text-align: center;
+    font-size: 2.5rem;
+    font-weight: 600;
+}
+.aboutus-para{
+    font-size: 1.2rem;
+    margin:25px 25px;
+}
+
+@media only screen and (max-width: 600px) {
+    .tagline{
         margin-top: 2rem;
-  width: 100%;
-  height: fit-content;
-  display: block;
-    }
-    #missiontext{
-        margin:0;
         text-align: center;
+        font-size: 1.5rem;
+        font-weight: 600;
     }
-    .mottopic{
-        position: relative;
-  height: 10rem;
-  width: 23rem;
-  /* left: 1rem; */
-  margin: 0 auto;
-    }
-    #aboutus{
-        display: block;
-  width: 100%;
-  height:fit-content;
-    }
-    .aboutpic{
-        position: relative;
-        height:15rem;
-        width:20rem;
-        margin:  0 auto;
-    }
-    #abouttext{
-        margin: 0;
+    .aboutus-mission-heading,.aboutus-about-heading,.aboutus-offering-heading{
+        margin-top: 10px;
         text-align: center;
+        font-size: 1.8rem;
+        font-weight: 600;
     }
-    #founding{
-        margin-top: 3rem;
-        display: block;
-        height: fit-content;
-    }
-    #foundingtext{
-        text-align: center;
-        margin:0;
-    }
-    .foundingpic{
-        position: relative;
-        height: 18rem;
-        width: 20rem;
-        /* left: 4rem; */
-        margin: 0 auto;
-    }
-    #founders{
-        margin-top: 5rem;
-    }
-    #founderpics{
-        display: block;
-        text-align: center;
-    }
-
-
-    
 }
