--- a/frontend/src/Components/BillsandInsuarance/BillsandInsuarance.css
+++ b/frontend/src/Components/BillsandInsuarance/BillsandInsuarance.css
@@ -1,31 +1,10 @@
-body{
-    margin: 0;
-    overflow-x: hidden;
-    background-color: #CAF4F4;
-    font-family: 'Montserrat', 'sans-serif';
-}
-
-.header{
-    display: flex;
-    justify-content: space-between;
-    width: 100vw;
-    height: 80px;
-    background-color: #DFF8F8;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    margin: 0;
-}
-
-
-body {
-    background: #CAF4F4;;
-}
 #bills {
     display: flex;
-    background: #CAEFD1;
+    background: white;
     height: 550px;
+    width:100vw;
     justify-content: space-evenly;
-    margin-top: 80px;
+    margin-top: 30px;
 }
 #billtext {
     text-align: center;
@@ -34,20 +13,15 @@ body {
 
 }
 .billimg{
-    /* background-image: url("./Assets/Images/bill.png"); */
     background-image: url("../SwaasIcons/bill.png");
-
     background-size: cover;
     width: 689px;
     height: 600px;
 }
 .insuranceimg{
-    /* background-image: url("./Assets/Images/insurance.png"); */
     background-image: url("../SwaasIcons/insurance.png");
-
     background-size: cover;
-    width: 400px;
-    height: 390px;
+    width: 40vw;
 }
 #pay {
     border-radius: 20px;
@@ -59,9 +33,8 @@ body {
 
 #insurance {
     display: flex;
-    background: #CAEFD1;
+    background: white;
     height: 450px;
-   
     justify-content:space-evenly;
     margin-top: 80px;
 }
@@ -75,178 +48,17 @@ body {
 #insurancetext {
     margin-top: 120px;
     width: 60%;
+}
 
-}
-h1 {
-    color: #0D6869;
-    text-align: center;
-}
-h2 {
-    color: #307743;
-}
-.review{
-    display:flex;
-    justify-content: center;
-    height: 300px;
-    width: 75vw;
-    margin-top: 6rem;
-    background-color:#CAEFD1;
-}
-.review p{
-    text-align: center;
-    font-size: 2rem;
-    color: black;
-    position: relative;
-    top: 140px;
-    font-weight: bold;
-}
 .footer{
     height: 400px;
     width: 100vw;
     background:linear-gradient(#99E5A2,#41D8DD);
     margin-top: 10rem;
-}button {
-    border: none;
-}
-@media screen and (min-width:600px) and (max-width:900px) {
-    #bills{
-        height: fit-content;
-        width: 100%;
-        margin-top: 2rem;
-    }
-    .billimg{
-        height: 20rem;
-        width:20rem
-    }
-    .insuranceimg{
-        height: 12rem;
-  width: 18rem;
-    }
-
-    #billtext{
-        margin: 0;
-  text-align: center;
-  margin-top: 1rem;
-    }
-    #billtext h1{
-        text-align: center;
-        font-size: 1.5rem;
-    }
-    #billtext h2{
-        text-align: center;
-  font-size: 1.25rem;
-    }
-    #billtext p{
-        text-align: center;
-        font-size: 1rem;
-        font-weight: 600;
-    }
-    #pay{
-        height: 2.5rem;
-    width: 9rem;
-    margin: 0;
-    margin-bottom: 1rem;
-    }
-    #insurancetext{
-margin: 0;
-margin-top: 2rem;
-height: fit-content;
-width: fit-content;
-    }
-    #insurancetext h1{
-        text-align: center;
-        font-size: 1.5rem;
-    }
-    #insurancetext h2{
-        text-align: center;
-        font-size: 1.25rem;
-    }
-    #insurancetext p{
-        text-align: center;
-        font-size: 1rem;
-        font-weight: 600;
-    }
-#insurance{
-    height: fit-content;
-}
-#insure{
-    margin: 0;
-      margin-bottom: 3rem;
 }
 
-
-}
-@media screen and (max-width:600px)
-{
-    #bills{
-        height: fit-content;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  justify-content: center;
-  text-align: center;
-  margin-top: 1rem;
-
+@media only screen and (max-width: 1000px) {
+    body {
+      background-color: lightblue;
     }
-    .billimg,.insuranceimg{
-        height: 12rem;
-  width: 12rem;
-    }
-    #billtext,#insurancetext{
-        width: 100%;
-  margin: 0;
-  margin-top: 1rem;
-  text-align: center;
-    }
-    #billtext{
-        width: 100%;
-  margin: 0;
-  margin-top: 1rem;
-  text-align: center;
-    }
-    #billtext ,#insurancetext h1{
-        text-align: center;
-  font-size: 1.5rem;
-    }
-    #billtext h1{
-        text-align: center;
-        font-size: 1.5rem;
-    }
-    #billtext,#insurancetext h2{
-        text-align: center;
-  font-size: 1.25rem;
-    }
-    #billtext h2{
-        text-align: center;
-  font-size: 1.25rem;
-    }
-    #billtext,#insurancetext p{
-        text-align: center;
-  font-size: 1rem;
-  font-weight: 600;
-    }
-    #billtext p{
-        text-align: center;
-  font-size: 1rem;
-  font-weight: 600;
-    }
-    #pay,#insure{height: 2.5rem;
-        width: 9rem;
-        margin: 0;
-        margin-bottom: 1rem;}
-        #pay{
-            height: 2.5rem;
-        width: 9rem;
-        margin: 0;
-        margin-bottom: 1rem;
-        }
-        #insurance{
-            height: fit-content;
-            display: flex;
-            flex-direction: column-reverse;
-            width: 100%;
-            justify-content: center;
-            text-align: center;
-            margin-top: 3rem;
-        }
-}
+  }
