--- a/frontend/src/Components/Doctors/Doctors.css
+++ b/frontend/src/Components/Doctors/Doctors.css
@@ -1,20 +1,3 @@
-body{
-    margin: 0;
-    overflow-x: hidden;
-    background-color: #CAF4F4;
-    font-family: 'Montserrat', 'sans-serif';
-}
-.header{
-    display: flex;
-    justify-content: space-between;
-    width: 100vw;
-    height: 80px;
-    background-color: #DFF8F8;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    margin: 0;
-}
-
 .infoDoc{
     font-size: 2.25rem;
     font-weight: 600;
@@ -23,7 +6,7 @@ body{
     margin-top: 20px;
     margin-left: 25%;
 }
-.profileDoc-info{
+.doctor-details-card{
     height: 250px;
     width: 50vw;
     position: relative;
@@ -31,17 +14,15 @@ body{
     margin-left: 25%;
     display: flex;
     justify-content: space-evenly;
-    background-color:#CAEFD1;
+    background-color:white;
     border-radius: 1.5rem;
     margin-bottom: 0;
 }
-.photoDoc{
+.doctor-profile-image{
     height: 200px;
     width: 200px;
     margin-top: 25px;
-    /* background-image: url("./Assests/Images/photo.png"); */
     background-image: url("../SwaasIcons/photo.png");
-
     border-radius: 1rem;
     background-size: cover;
 }
