--- a/frontend/src/Components/HomePage/HomePage.css
+++ b/frontend/src/Components/HomePage/HomePage.css
@@ -1,532 +1,484 @@
-*{
-    box-sizing: border-box;
-    margin:0;
-    padding:0;
-    font-family:'Encode Sans Expanded',sans-serif;
-
-}
-.LoginButtonHome{
-    width: fit-content;
+.LoginButtonHome {
+  width: -moz-fit-content;
+  width: fit-content;
   margin: 0;
   display: flex;
   justify-content: center;
   align-content: center;
+  font-size: 1.4rem;
+  font-weight: bold;
 }
-.inputButtonLogin{
-    border-radius: 1rem;
-  background: linear-gradient(to left,#99E5A2,#41D8DD);
-  color: #0D6869;
-  border: none;
-  height: 2rem;
-  width: 5rem;
-  margin-top: 1.5rem;
-  margin-right: 1.5rem;
-}
-.headerHome{
-    height: 80px;
-    width: 100vw;
-    margin:0;
-    background-color: #DFF8F8;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    display: flex;
-    justify-content: space-between;
-    /* position: -webkit-sticky; */
-}
-.dropdown{
-    background-image: url("../SwaasIcons/icons8-list-48.png");
-    height:3rem;
-    width:3rem;
-    display: none;
-    cursor: pointer;
-}
-.nav-bar{
-    /* height: 140px; */
-    width: 60vw;
-    text-align: center;
-    margin-top: -5rem;
-    display: flex;
-    flex-direction: row;
-}
-.navbar-elements{
-    position: relative;
-    top: 92px;
-    text-decoration: none;
-    color: #0D6869;
-    
 
-    margin-left: 5rem;
-    font-size: 1.3rem;
-    padding: 4px;
+.headerHome {
+  height: 90px;
+  width: 100vw;
+  background-color: #0D6869;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  justify-content: space-between;
+}
+
+.swaas-logo {
+  margin: 20px;
+  height: 43px;
+  width: 141px;
+}
+
+.dropdown {
+  background-image: url("../SwaasIcons/icons8-list-48.png");
+  height: 3rem;
+  width: 3rem;
+  display: none;
+  cursor: pointer;
+}
+
+.nav-bar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.navbar-elements {
+  align-items: center;
+  justify-content: center;
+  color: white;
+  top: 92px;
+  text-decoration: none;
+  margin-left: 2rem;
+  font-size: 1.3rem;
+  font-weight: 600;
+  padding: 4px;
+}
+
+.inputButtonLogin {
+  border-radius: 1rem;
+  background: linear-gradient(to left, #99E5A2, #41D8DD);
+  color: white;
+  border: none;
+  height:3rem;
+  width:8rem;
+  margin-top: 1.5rem;
+  margin-right: 4rem;
+}
+
+.aboutus-image {
+  height: 400px;
+  border-radius: 1rem;
+  background-color: white;
+  margin-top: 40px;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  left: 12%;
+  display: block;
   
 }
 
+.infoHome {
+  height: 75;
+  width: 75vw;
+  border-radius: 1rem;
+  background-color: white;
+  margin-top: 40px;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  left: 12%;
+}
 
-body{
-    background-color: #CAF4F4;
-    overflow-x: hidden;
-    font-family: 'Montserrat', 'sans-serif';
+.infoHome2 {
+  height: 60vh;
+  width: 75vw;
+  border-radius: 1rem;
+  background-color: white;
+  margin-top: 40px;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  left: 12%;
 }
-.infoHome{
-    height: 450px;
-    width: 75vw;
-    border-radius: 1rem;
-    background-color: #CAEFD1;
-    margin-top: 40px;
-    display: flex;
-    justify-content: center;
-    position: relative;
-    left:12%;
-}
-.infoHome2{
-    height: 63vh;
-    width: 75vw;
-    border-radius: 1rem;
-    background-color: #CAEFD1;
-    margin-top: 40px;
-    display: flex;
-    justify-content: center;
-    position: relative;
-    left:12%;
-}
-.text-infoHome{
-    margin: 0;
-    height: 450px;
-    width: 550px;
-    border-radius: 1rem;
-}
-.image-info1{
-    /* background-image: url("./Assets/Images/Download_Doctors_Concept_Illustration_for_free-removebg-preview\ 1.png"); */
-    background-size: cover;
-    background-image: url("../SwaasIcons/Download_Doctors_Concept_Illustration_for_free-removebg-preview\ 1.png");
 
-    height: 450px;
-    width: 450px;
-    margin: 0px;
+.text-infoHome {
+  margin: 0;
+  height: 350px;
+  width: 550px;
+  border-radius: 1rem;
+  background-size: cover;
+  height: 450px;
+  width: 450px;
+  margin: 0px;
 }
-.msg{
-    align-items: center;
-    text-align: center;
-    font-size: 2.8rem;
-    color: #6999B3;
-    margin-top:2rem;
-    margin-left: 2.4rem;
-    margin-right: 2.4rem;
-}
-.text-infoHome p{
-    /* font-size: 1.4rem;
-text-align: center;
-margin:2rem; */
-color: #6999B3;
-text-align: center;
-font-family: Inter;
-font-size: 20px;
-font-style: normal;
-font-weight: 300;
-line-height: normal;
-}
-#toknow{
-    margin:0 9rem 0 ;
-    border: 1px solid black;
-    height: 4rem;
-    width: 15rem;
-    text-align: center;
-    border-radius: 1rem;
-    background:linear-gradient(to left,#99E5A2,#41D8DD);
-    color:#0D6869;
-    font-size: 1.8rem;
-}
-#toknow2{
-    margin:0 9rem 0 ;
-    border: 1px solid black;
-    height: 4rem;
-    width: 15rem;
-    text-align: center;
-    border-radius: 1rem;
-    background:linear-gradient(to left,#99E5A2,#41D8DD);
-    color:#0D6869;
-    font-size: 1.8rem;
-}
-.communicationHome{
-    height: 360px;
-    width: 77vw;
-    border-radius: 1rem;
-    background-color: #CAF4F4;
-    margin-top: 40px;
-    margin-left: 155px;
-    display: flex;
-    justify-content: space-evenly;
-}
-.commHome1{
-    margin: 0;
-    height: 340px;
-    width:210px;
-    border-radius: 1rem;
-    background-color: #CAEFD1;
-}
-.img-com1{
-    height: 250px;
-    width: 210px;
-    /* background-image: url("./Assets/Images/Emergency.png"); */
-    background-image: url("../SwaasIcons/Emergency.png");
 
-    background-size: cover;
-    border-top-right-radius: 1rem;
-    border-top-left-radius: 1rem;
+.main-msg {
+  align-items: center;
+  text-align: center;
+  font-size: 2.5rem;
+  color: #6999B3;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
-.img-com2{
-    height: 250px;
-    width: 210px;
-    /* background-image: url("./Assets/Images/TeleConsultation-removebg-preview.png"); */
-    background-image: url("../SwaasIcons/TeleConsultation-removebg-preview.png");
 
-    background-size: cover;
-    border-top-right-radius: 1rem;
-    border-top-left-radius: 1rem;
+.banner-heading{
+  align-items: center;
+  justify-content: center;
+  font-size: 2.5rem;
+  color: #6999B3;
+  margin:2rem 4rem;
 }
-.img-com3{
-    height: 250px;
-    width: 210px;
-    background-image: url("../SwaasIcons/home4-removebg.png");
 
-    /* background-image: url("./Assets/Images/home4-removebg.png"); */
-    /* background-size: cover; */
-    border-top-right-radius: 1rem;
-    border-top-left-radius: 1rem;
+.text-infoHome p {
+  color: #6999B3;
+  text-align: center;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
 }
-.img-com4{
-    height: 250px;
-    width: 210px;
-    /* background-image: url("./Assets/Images/Reports.png"); */
-    background-image: url("../SwaasIcons/Reports.png");
 
-    background-size: cover;
-    border-top-right-radius: 1rem;
-    border-top-left-radius: 1rem;
+#toknow {
+  margin: 0 6rem 0;
+  border: 1px solid black;
+  height: 4rem;
+  width: 10rem;
+  text-align: center;
+  border-radius: 1rem;
+  background: linear-gradient(to left, #99E5A2, #41D8DD);
+  color: white;
+  font-size: 1.2rem;
+  font-weight: 600;
 }
-.info-comHome{
-text-align: center;
-margin-top: 1rem;
 
+#toknow2 {
+  margin: 0 9rem 0;
+  border: 1px solid black;
+  height: 4rem;
+  width: 15rem;
+  text-align: center;
+  border-radius: 1rem;
+  background: linear-gradient(to left, #99E5A2, #41D8DD);
+  color: white;
+  font-size: 1.8rem;
 }
-.info-comHome a{
-text-decoration: none;
-color: #0D6869;
-font-size: 1.25rem;
-font-weight: bold;
-display: flex;
-justify-content: center;
-}
-.info-comHome p{
-    color: #906E69;
-}
-.image-info2{
-    /* background-image: url("./Assets/Images/home6.png"); */
-    background-image: url("../SwaasIcons/home6.png");
 
-    background-size: cover;
-    height: 450px;
-    width: 490px;
-    margin: 0px;
-    border-top-left-radius: 1rem;
-    border-bottom-left-radius: 1rem;
+.communicationHome {
+  height: 360px;
+  width: 77vw;
+  border-radius: 1rem;
+  background-color: #CAF4F4;
+  margin-top: 40px;
+  margin-left: 155px;
+  display: flex;
+  justify-content: space-evenly;
 }
-.image-info3{
-    /* background-image: url("./Assets/Images/BillsandInsuarance.png"); */
-    background-image: url("../SwaasIcons/BillsandInsuarance.png");
 
-    background-size:cover;
-    height: 62vh;
-    width: 25vw;
-    margin: 0px;
-    border-top-right-radius: 1rem;
-    border-bottom-right-radius: 1rem;
+.commHome1 {
+  margin: 0;
+  height: 340px;
+  width: 210px;
+  border-radius: 1rem;
+  background-color: white;
 }
-.image-info4{
-    /* background-image: url("./Assets/Images/home8.png"); */
-    background-image: url("../SwaasIcons/home8.png");
 
-    background-size: cover;
-    height: 450px;
-    width: 480px;
-    margin: 0px;
-    border-top-left-radius: 1rem;
-    border-bottom-left-radius: 1rem;
-}
-.blank{
-    margin: 6.8rem;
-    height: 0;
-    width: 80vw;
-    border: 1px solid black;
-}
-.review{
-    width: 75vw;
-    height: 300px;
-    margin-top: 6.8rem;
-    margin-bottom: 6.8rem;
-    margin-left: 12%;
-    border-radius: 1.5rem;
-    background-color: #CAEFD1;
-    text-align: center;
-}
-.review-info{
- font-size: 3rem;
- font-weight: bold;
- margin-top: 100px;
- color:#0D6869;
-}
-.contactus{
-    height: 300px;
-    width:100vw;
-    border-top-right-radius: 2rem;
-    border-top-left-radius: 2rem;
-    color:linear-gradient(to top,#4998A0,#C9EFD1);
-    
-}
-.contactus
-:hover{
-color: linear-gradient(270deg, #12ec33 0%, #0688ce 100%);} 
+.img-com1 {
+  height: 250px;
+  width: 210px;
+  background-image: url("../SwaasIcons/Emergency.png");
 
-
-.logonew{
-    position: relative;
-    top: 90px;
-    margin-left: 35rem;
-
-    background-size: cover;
-    /* background-image: url("./Assets/Images/logo4-removebg-preview\ 1.png"); */
-    background-image: url("../SwaasIcons/logo4-removebg-preview\ 1.png");
-
-    height: 175px;
-    width: 300px;
+  background-size: cover;
+  border-top-right-radius: 1rem;
+  border-top-left-radius: 1rem;
 }
-.contactus p{
-    position: relative;
-color:beige;
-font-size: 1.5rem;
-    top: 90px;
 
-    margin-left: 41rem;
+.img-com2 {
+  height: 250px;
+  width: 210px;
+  background-image: url("../SwaasIcons/TeleConsultation-removebg-preview.png");
 
+  background-size: cover;
+  border-top-right-radius: 1rem;
+  border-top-left-radius: 1rem;
 }
-@media screen and (min-width:780px ) and (max-width:900px) {
-    .communicationHome{
-        display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 10px;
-  height:fit-content;
-  margin-top:1rem ;
-  margin: 1rem auto;
-  left:0;
-  width:100%;
-      }
-      .commHome1{
-        height:15rem;
-        width:10rem;
-        margin-left: 1rem;
-      }
+
+.img-com3 {
+  height: 250px;
+  width: 210px;
+  background-image: url("../SwaasIcons/home4-removebg.png");
+  border-top-right-radius: 1rem;
+  border-top-left-radius: 1rem;
 }
+
+.img-com4 {
+  height: 250px;
+  width: 210px;
+  background-image: url("../SwaasIcons/Reports.png");
+
+  background-size: cover;
+  border-top-right-radius: 1rem;
+  border-top-left-radius: 1rem;
+}
+
+.info-comHome {
+  text-align: center;
+  justify-content: center;
+  margin-top: 1rem;
+}
+
+.blank {
+  margin: 6.8rem;
+  height: 0;
+  width: 80vw;
+  border: 1px solid black;
+}
+.banner-image{
+  height: 25rem;
+  width: auto;
+  margin-top: 20px;
+}
+@media screen and (min-width:780px) and (max-width:900px) {
+  .communicationHome {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+    height: fit-content;
+    margin-top: 1rem;
+    margin: 1rem auto;
+    left: 0;
+    width: 100%;
+  }
+
+  .commHome1 {
+    height: 15rem;
+    width: 10rem;
+    margin-left: 1rem;
+  }
+}
+
 @media screen and (min-width:588px) and (max-width:780px) {
-    .communicationHome{
-        display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
-  height:fit-content;
-  margin-top:1rem ;
-  margin: 1rem auto;
-  left:0;
-  width:100%;
-      }
-      .commHome1{
-        height:15rem;
-        width:10rem;
-        margin-left: 1rem;
-      }}
-      @media screen and (min-width:377px) and (max-width:588px) {
-        .communicationHome{
-            display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 10px;
-      height:fit-content;
-      margin-top:1rem ;
-      margin: 1rem auto;
-      left:0;
-      width:100%;
-          }
-          .commHome1{
-            height:15rem;
-            width:10rem;
-            margin: 0 auto;
-          }}
-          @media screen  and (max-width:377px) {
-            .communicationHome{
-                display: grid;
-          grid-template-columns: repeat(1, 1fr);
-          gap: 10px;
-          height:fit-content;
-          margin-top:1rem ;
-          margin: 1rem auto;
-          left:0;
-          width:100%;
-              }
-              .commHome1{
-                height:15rem;
-                width:10rem;
-margin: 0 auto;              }}
-        
+  .communicationHome {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    height: fit-content;
+    margin-top: 1rem;
+    margin: 1rem auto;
+    left: 0;
+    width: 100%;
+  }
+
+  .commHome1 {
+    height: 15rem;
+    width: 10rem;
+    margin-left: 1rem;
+  }
+}
+
+@media screen and (min-width:377px) and (max-width:588px) {
+  .communicationHome {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    height: fit-content;
+    margin-top: 1rem;
+    margin: 1rem auto;
+    left: 0;
+    width: 100%;
+  }
+
+  .commHome1 {
+    height: 15rem;
+    width: 10rem;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (max-width:377px) {
+  .communicationHome {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 10px;
+    height: fit-content;
+    margin-top: 1rem;
+    margin: 1rem auto;
+    left: 0;
+    width: 100%;
+  }
+
+  .commHome1 {
+    height: 15rem;
+    width: 10rem;
+    margin: 0 auto;
+  }
+}
+@media screen and (max-width:1200px) {
+  .communicationHome {
+    gap:20px;
+
+  }
+}
 
 @media screen and (max-width:900px) {
-    .dropdown{
-        display: block;
-        position: relative;
-        top:1rem;
-    }
-    .headerHome{
-        position: relative;
-    }
-    
-    .nav-bar{
-        width: 100%;
-        height: 100vh;
-        background: #DFF8F8;
-        position: absolute;
-        top: 2rem;
-        left: 0;
+  .dropdown {
+    display: block;
+    position: relative;
+    top: 1rem;
+  }
+
+  .headerHome {
+    position: relative;
+  }
+
+  .nav-bar {
+    width: 100%;
+    height: 100vh;
+    background: #DFF8F8;
+    position: absolute;
+    top: 2rem;
+    left: 0;
     z-index: 99;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    
-        /* to get the tranisition  */
-        transform: translateX(100%);
-        transition: all 0.5s linear;
-    
-        opacity: 0;
-        visibility: hidden;
-        pointer-events: none; }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translateX(100%);
+    transition: all 0.5s linear;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
 
-    .navbar-elements{
-        flex-direction: column;
-        align-items: center;
-        color :black
-    
-    }
-    .active .nav-bar {
-        transform: translateX(0);
-        opacity: 1;
-        visibility: visible;
-        pointer-events: auto;
-      }
-      .active .dropdown {
-        display: block;
-      }
-      .Adi{
-        display: flex;
-  justify-content: center;
-      }
-      .msg{
-        font-size: 1.5rem;
-        margin: 1rem 1.4rem;
+  .navbar-elements {
+    flex-direction: column;
+    align-items: center;
+    color: black
+  }
 
+  .active .nav-bar {
+    transform: translateX(0);
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
 
-      }
-      .text-infoHome{
-        width:100%;
-        height: fit-content;
-      }
-      .text-infoHome p{
-        display:none;
-      }
-      #toknow{
-        height:3rem;
-        width:11rem;
-        margin-top: 1rem;
-        font-size: 1.4rem;
-        margin-left: 8rem;
-        margin: 0;
-      }
-      #toknow2{
-        height:3rem;
-        width:11rem;
-        margin-top: 1rem;
-        font-size: 1.4rem;
-        margin-left: 4.5rem;
-        margin: 0;
-      }
-      .infoHome{
-        left:0;
-        width:100vw;
-        display: block;
-        height:fit-content;
-      }
-      .image-info1{
-        position: relative;
-  height: 10rem;
-  width: 10rem;
-  margin: 0 auto;
-  /* top: 11rem; */
-      }
-      /* .communicationHome{
-        display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 10px;
-  height:60vh;
-  margin-top:1rem ;
-  margin: 1rem auto;
-  left:0;
-  width:100%;
-      } */
-      .img-com1{
-        height:9rem;
-        width:10rem;
-      }
-      
-      .info-comHome a{
-        font-size: 1rem;
-      }
-      .img-com2,.img-com3,.img-com4{
-        height:10rem;
-        width:10rem;
-      }
-      .image-info2{
-        position: relative;
-        height:12rem;
-        width:15rem;
-        margin: 0 auto;
-      }
-      .infoHome2{
-        height:fit-content;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-      }
-      .image-info4{
-        position:relative;
-        height:12rem;
-        width:15rem;
-        margin: 0 auto;
-      }
-      .image-info3{
-        position:relative;
-        height:10rem;
-        margin: 0 auto;
-        width:8.5rem;
-      }
-      *{
-        overflow-x: hidden;
-      
-    }
-    .text-infoHome{
-        height:fit-content;
-    }
-    .blank{
-        margin-top:3rem;
-        margin-left:2.5rem;
-        margin-right: 2rem;
-        margin-bottom: 3rem;;
-    }
-    .review{
-        margin-top:0rem;
-    }
-    
+  .active .dropdown {
+    display: block;
+  }
+
+  .Adi {
+    display: flex;
+    justify-content: center;
+  }
+
+  .msg {
+    font-size: 1.5rem;
+    margin: 1rem 1.4rem;
+  }
+
+  .text-infoHome {
+    width: 100%;
+    height: fit-content;
+  }
+
+  .text-infoHome p {
+    display: none;
+  }
+
+  #toknow {
+    height: 3rem;
+    width: 11rem;
+    margin-top: 1rem;
+    font-size: 1.4rem;
+    margin-left: 8rem;
+    margin: 0;
+  }
+
+  #toknow2 {
+    height: 3rem;
+    width: 11rem;
+    margin-top: 1rem;
+    font-size: 1.4rem;
+    margin-left: 4.5rem;
+    margin: 0;
+  }
+
+  .infoHome {
+    left: 0;
+    width: 100vw;
+    display: block;
+    height: fit-content;
+  }
+
+  .image-info1 {
+    position: relative;
+    height: 10rem;
+    width: 10rem;
+    margin: 0 auto;
+  }
+
+  .img-com1 {
+    height: 9rem;
+    width: 10rem;
+  }
+
+  .info-comHome a {
+    font-size: 1rem;
+  }
+
+  .img-com2,
+  .img-com3,
+  .img-com4 {
+    height: 10rem;
+    width: 10rem;
+  }
+
+  .image-info2 {
+    position: relative;
+    height: 12rem;
+    width: 15rem;
+    margin: 0 auto;
+  }
+
+  .infoHome2 {
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .image-info4 {
+    position: relative;
+    height: 12rem;
+    width: 15rem;
+    margin: 0 auto;
+  }
+
+  .image-info3 {
+    position: relative;
+    height: 10rem;
+    margin: 0 auto;
+    width: 8.5rem;
+  }
+
+  * {
+    overflow-x: hidden;
+
+  }
+
+  .text-infoHome {
+    height: fit-content;
+  }
+
+  .blank {
+    margin-top: 3rem;
+    margin-left: 2.5rem;
+    margin-right: 2rem;
+    margin-bottom: 3rem;
+    ;
+  }
+
+  .review {
+    margin-top: 0rem;
+  }
+
 }
