--- a/frontend/src/Components/Profile/PatientProfile.css
+++ b/frontend/src/Components/Profile/PatientProfile.css
@@ -3,16 +3,17 @@
     height: 100vh;
 }
 .PatientProfileHeading{
-    font-size: 2rem;
-font-weight: 600;
-text-align: center;
-color: #307743;
+  font-size: 2rem;
+  font-weight: 600;
+  text-align: center;
+  color: #307743;
 }
 .userImage{
     height: 10rem;
     width: 10rem;
     margin-top: 8rem;
 }
+
 .detailsHeading{
 font-size: 1.5rem;
 font-weight: 600;
@@ -31,10 +32,9 @@ color: #307743;
     margin: 1rem;
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
 }
 .table{
-    border: 2px solid #0D6869;
+  border: 2px solid #0D6869;
   border-radius: 1rem;
   width: 27vw;
   height: 3rem;
@@ -43,10 +43,9 @@ color: #307743;
   padding: 0.5rem 1rem;
 }
 .DetailsForm{
-    background-color: #CAEFD1;
+    background-color: white;
     height: auto;
     width: 60vw;
-    /* margin-left: 5rem; */
     margin-top: 3rem;
     border-radius: 1.5rem;
     margin-bottom: 5rem;
