--- a/frontend/src/Components/Registration/Patient/Register.css
+++ b/frontend/src/Components/Registration/Patient/Register.css
@@ -1,55 +1,59 @@
-.header{
+.header {
     display: flex;
     justify-content: space-between;
     width: 100vw;
     height: 80px;
-    background-color: #DFF8F8;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     margin: 0;
 }
-.Register{
+
+.Register {
     display: flex;
 }
-.RegistrationPhoto{
-    background-image: url("../../SwaasIcons/aboutuspic.png");
-    height: 20rem;
-    width: 26rem;
-    margin-top: 10rem;
+
+.RegistrationPhoto {
+    background-image: url("../../SwaasIcons/Registration.jpg");
+    height:70vh;
+    width: 40vw;
+    margin: 8rem 2rem ;
     background-size: cover;
     position: relative;
 }
-.genderOption{
+
+.genderOption {
     border: none;
-    background: #DFF8F8;
     margin-left: 3rem;
     width: 7rem;
-    height: 2rem;
+    height: 3rem;
     border-radius: 0.5rem;
     padding: 0.5rem;
     border: 1px solid black;
 }
-.logo{
-    /* background-image: url("./Assets/logo.png"); */
+
+.logo {
+
     background-size: cover;
     height: 80px;
     width: 160px;
-    margin-left: 1rem ;
+    margin-left: 1rem;
 }
-.profile-photo{
-    /* background-image: url("./Assets/profile-photo.png"); */
+
+.profile-photo {
     background-size: cover;
     height: 80px;
     width: 80px;
     margin-right: 3rem;
 }
-.heading{
+
+.heading {
     align-items: center;
     font-weight: 500;
     font-size: 2rem;
 }
-.registrationForm{
-    background-color: #CAEFD1;
+
+.registrationForm {
+    background-color: white;
     height: auto;
     width: 60vw;
     margin-left: 5rem;
@@ -58,24 +62,28 @@
     margin-bottom: 5rem;
     position: relative;
 }
-.d-sign-in h2{
+
+.d-sign-in h2 {
     align-items: center;
     margin-left: 44%;
     font-weight: 500;
 }
-.doctor{
+
+.doctor {
     height: 5rem;
     width: 50%;
     margin-bottom: 0.5rem;
     margin-top: 1rem;
 }
-.doctorId{
+
+.doctorId {
     font-size: 1.25rem;
     margin-left: 3rem;
     width: 100%;
     color: #307743;
 }
-.doctorId-in-File{
+
+.doctorId-in-File {
     height: 2.5rem;
     width: 80%;
     margin-left: 3rem;
@@ -86,7 +94,8 @@
     padding-left: 0.5rem;
 
 }
-.doctorId-in{
+
+.doctorId-in {
     height: 2.5rem;
     width: 80%;
     margin-left: 3rem;
@@ -96,7 +105,8 @@
     border: 1px solid black;
     padding: 1rem;
 }
-.doc-btn{
+
+.doc-btn {
     font-size: 1.25rem;
     color: aliceblue;
     font-weight: 600;
@@ -105,10 +115,12 @@
     margin-bottom: 1rem;
     border-radius: 1rem;
 }
-.doc-sign{
+
+.doc-sign {
     display: flex;
     flex-wrap: wrap;
 }
-.doc-btn:hover{
+
+.doc-btn:hover {
     box-shadow: 2px 4px 8px black;
 }
