--- a/frontend/src/Components/Registration/Registration.css
+++ b/frontend/src/Components/Registration/Registration.css
@@ -1,64 +1,43 @@
-.body{
-	font-family: 'Poppins', sans-serif;
-	font-weight: 300;
-	font-size: 15px;
-	line-height: 1.7;
-	overflow-x: hidden;
-  /* overflow-y: hidden; */
-  /* background-image: url('https://wallpapers.com/images/hd/medical-background-cjge7e89adg6ub8x.jpg'); */
-}
-p {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.7;
-}
-h4 {
-  font-weight: 600;
-}
-h6 span{
-  padding: 0 20px;
-  text-transform: uppercase;
-  font-weight: 700;
-}
-.LogIn,.SingnUp{
+.LogIn,
+.SingnUp {
   color: #0D6869;
   height: 2rem;
   width: 6rem;
   font-weight: 600;
   margin: 0 1.5rem;
 }
-.registration-section{
+
+.registration-section {
   position: relative;
   width: 100%;
   display: block;
-  /* overflow-y: scroll; */
-  /* height: 300px; */
+}
 
+.registration {
+  background-repeat: repeat-x;
+  background-size: contain;
+  background-size: 100% 100%;
 }
-.registration{
-    background-repeat: repeat-x;
-    /* background-image: url('../../Assets/Images/registration-bg.jpg'); */
-    background-size: contain;
-    background-size: 100% 100%;
-}
-div.scroll{
+
+div.scroll {
   overflow-y: scroll;
   height: 200px;
   display: block;
 
 }
 
-.full-height{
+.full-height {
   min-height: 100vh;
 }
+
 [type="checkbox"]:checked,
-[type="checkbox"]:not(:checked){
+[type="checkbox"]:not(:checked) {
   position: absolute;
   display: none;
-  /* left: -9999px; */
 }
-.registration-checkbox:checked + label,
-.registration-checkbox:not(:checked) + label{
+
+.registration-checkbox:checked+label,
+.registration-checkbox:not(:checked)+label {
   position: relative;
   display: block;
   text-align: center;
@@ -70,8 +49,9 @@ div.scroll{
   cursor: pointer;
   background-color: #8FDD9E;
 }
-.registration-checkbox:checked + label:before,
-.registration-checkbox:not(:checked) + label:before{
+
+.registration-checkbox:checked+label:before,
+.registration-checkbox:not(:checked)+label:before {
   position: absolute;
   display: block;
   width: 36px;
@@ -89,7 +69,8 @@ div.scroll{
   font-size: 24px;
   transition: all 0.5s ease;
 }
-.registration-checkbox:checked + label:before {
+
+.registration-checkbox:checked+label:before {
   transform: translateX(44px) rotate(-270deg);
 }
 
@@ -102,19 +83,21 @@ div.scroll{
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
   perspective: 800px;
-  /* margin-top: 60px; */
 }
+
 .registration-card-3d-wrapper {
   width: 100%;
   height: 100%;
-  position:absolute;    
+  position: absolute;
   top: 0;
-  left: 0;  
+  left: 0;
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
-  transition: all 600ms ease-out; 
+  transition: all 600ms ease-out;
 }
-.registration-card-front, .registration-card-back {
+
+.registration-card-front,
+.registration-card-back {
   background-image: url('https://img.freepik.com/free-vector/medical-healthcare-blue-color_1017-26807.jpg');
   width: 100%;
   height: 100%;
@@ -132,17 +115,18 @@ div.scroll{
   -o-backface-visibility: hidden;
   backface-visibility: hidden;
 }
+
 .registration-card-back {
   transform: rotateY(180deg);
 }
-.registration-checkbox:checked ~ .registration-card-3d-wrap .registration-card-3d-wrapper {
+
+.registration-checkbox:checked~.registration-card-3d-wrap .registration-card-3d-wrapper {
   transform: rotateY(180deg);
 }
-.registration-center-wrap{
+
+.registration-center-wrap {
   position: absolute;
   width: 100%;
-  /* height: 300px; */
-  /* overflow-y: scroll; */
   padding: 0 35px;
   top: 50%;
   left: 0;
@@ -152,12 +136,13 @@ div.scroll{
 }
 
 
-.registration-form-group{ 
+.registration-form-group {
   position: relative;
   display: block;
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
+
 .registration-form-style {
   padding: 13px 20px;
   padding-left: 55px;
@@ -174,14 +159,16 @@ div.scroll{
   border: none;
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
-  box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
+  box-shadow: 0 4px 8px 0 rgba(21, 21, 21, .2);
 }
+
 .registration-form-style:focus,
 .registration-form-style:active {
   border: none;
   outline: none;
-  box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
+  box-shadow: 0 4px 8px 0 rgba(21, 21, 21, .2);
 }
+
 .registration-input-icon {
   position: absolute;
   top: 0;
@@ -192,62 +179,69 @@ div.scroll{
   text-align: left;
   color: #ffeba7;
   -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
+  transition: all 200ms linear;
 }
 
-.registration-form-group input:-ms-input-placeholder  {
+.registration-form-group input:-ms-input-placeholder {
   color: #c4c3ca;
   opacity: 0.7;
   -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
-}
-.registration-form-group input::-moz-placeholder  {
-  color: #c4c3ca;
-  opacity: 0.7;
-  -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
-}
-.registration-form-group input:-moz-placeholder  {
-  color: #c4c3ca;
-  opacity: 0.7;
-  -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
-}
-.registration-form-group input::-webkit-input-placeholder  {
-  color: #c4c3ca;
-  opacity: 0.7;
-  -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
-}
-.registration-form-group input:focus:-ms-input-placeholder  {
-  opacity: 0;
-  -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
-}
-.registration-form-group input:focus::-moz-placeholder  {
-  opacity: 0;
-  -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
-}
-.registration-form-group input:focus:-moz-placeholder  {
-  opacity: 0;
-  -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
-}
-.registration-form-group input:focus::-webkit-input-placeholder  {
-  opacity: 0;
-  -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
+  transition: all 200ms linear;
 }
 
-.registration-btn{  
+.registration-form-group input::-moz-placeholder {
+  color: #c4c3ca;
+  opacity: 0.7;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+}
+
+.registration-form-group input:-moz-placeholder {
+  color: #c4c3ca;
+  opacity: 0.7;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+}
+
+.registration-form-group input::-webkit-input-placeholder {
+  color: #c4c3ca;
+  opacity: 0.7;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+}
+
+.registration-form-group input:focus:-ms-input-placeholder {
+  opacity: 0;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+}
+
+.registration-form-group input:focus::-moz-placeholder {
+  opacity: 0;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+}
+
+.registration-form-group input:focus:-moz-placeholder {
+  opacity: 0;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+}
+
+.registration-form-group input:focus::-webkit-input-placeholder {
+  opacity: 0;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+}
+
+.registration-btn {
   border-radius: 4px;
   height: 7vh;
   width: 15vw;
   font-size: 13px;
   font-weight: 600;
   text-transform: uppercase;
-  -webkit-transition : all 200ms linear;
+  -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
   padding: 0 0;
   letter-spacing: 1px;
@@ -265,21 +259,24 @@ div.scroll{
   -ms-flex-pack: center;
   text-align: center;
   border: none;
-  background-color: #DFF8F8;
-  color: linear-gradient(to left,#99E5A2,#41D8DD);
-  box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
+  background-color: #0D6869;
+  color: linear-gradient(to left, #99E5A2, #41D8DD);
+  box-shadow: 0 8px 24px 0 rgba(255, 235, 167, .2);
 }
+
 .registration-btn:active,
-.registration-btn:focus{  
+.registration-btn:focus {
   background-color: #0D6869;
   color: #DFF8F8;
   box-shadow: 0 8px 24px 0 #10277033;
 }
-.registration-btn:hover{  
-  background-color: linear-gradient(to left,#99E5A2,#63e3e8);
+
+.registration-btn:hover {
+  background-color: linear-gradient(to left, #99E5A2, #63e3e8);
   color: #f0ba09;
-  box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
+  box-shadow: 0 8px 24px 0 rgba(16, 39, 112, .2);
 }
+
 @media (max-width: 576px) {
   body {
     font-size: 12px;
@@ -289,6 +286,7 @@ div.scroll{
     width: 80%;
     margin: 20px auto;
   }
+
   .registration-form-style {
     padding: 13px 15px;
     font-size: 11px;
