--- a/frontend/src/Components/Teleconsultation/Teleconsultation.css
+++ b/frontend/src/Components/Teleconsultation/Teleconsultation.css
@@ -1,36 +1,45 @@
-body{
-    margin: 0;
-    overflow-x: hidden;
-    background-color: #CAF4F4;
-    font-family: 'Montserrat', 'sans-serif';
-}
-.header{
-    display: flex;
-    justify-content: space-between;
+.header-teleconsultation{
+    height: 90px;
     width: 100vw;
-    height: 80px;
-    background-color: #DFF8F8;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    margin: 0;
+    background-color: #0D6869;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: space-between;
+}
+.teleconsultation-main{
+    height: 70vh;
+    width: 90vw;
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 5vw;
+    border-radius: 20px;
 }
 
+
+.teleconsultaion-main-image{
+    height: 400px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
 .mainTele{
     margin-top: 80px;
     width: 100vw;
     height: 400px;
-    background-color: #CAEFD1;
     display: flex;
 }
- .Teleinfo{
+
+.Teleinfo{
     height: 400px;
     width: 800px;
     margin-left: 2rem;
 }
- .photo1Tele{
-    /* background-image: url("./Assests/Images/photo1.jpg"); */
+.photo1Tele{
     background-image: url("../SwaasIcons/photo1.jpg");
-
     background-size: cover;
     height:400px;
     width: 400px;
@@ -39,8 +48,8 @@ body{
 
 .TeleHI1{
     font-size: 2.5rem;
-color:#6999B3;
-font-weight:600;
+    color:#6999B3;
+    font-weight:600;
     margin-bottom: 0;
     margin-top: 3rem;
 }
@@ -70,6 +79,7 @@ font-weight:600;
     padding-top: 1rem;
     cursor: pointer;
 }
+
 .infoLinks{
     margin-top: 2rem;
 }
@@ -93,10 +103,10 @@ font-weight:600;
 }
 .heading-specialities h2{
     font-size: 2.5rem;
-color:#6999B3;
-font-weight:600;
-margin-top: 0;
-margin-bottom: 0;
+    color:#6999B3;
+    font-weight:600;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 .heading-specialities p{
     font-size: 1.25rem;
@@ -122,9 +132,7 @@ margin-bottom: 0;
     cursor:pointer;
 }
 .photo2{
-    /* background-image: url("./Assests/Images/photo2.jpeg"); */
     background-image: url("../SwaasIcons/photo2.jpeg");
-
     background-size: cover;
     margin: 0;
     height: 190px;
